# Proyecto_setas

./: README.md  main.py  pyproject.toml
Notebooks/: Eda.ipynb  Future_engenieer.ipynb  feature_engenieer.ipynb  modelo_ml.ipynb  modelo_red_neuronal.ipynb  red_neuronal.ipynb
data/: train_use.csv
utils/: __init__.py
